--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="main.js"></script>
+
+    <!--    <script src="./objects.js"></script>-->
+    <script src="./objects2.js"></script>
+    <!--    <script src="./objects1.js"></script>-->
+    <!--    <script src="./main3.js"></script>-->
+    <!--    <script src="./main2.js"></script>-->
+    <!--    <script src="./main.js"></script>-->
+
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
