--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 
     <!--    <script src="./objects.js"></script>-->
-    <script src="./objects2.js"></script>
+    <!--    <script src="./objects2.js"></script>-->
     <!--    <script src="./objects1.js"></script>-->
+    <!--    <script src="./main4.js"></script>-->
+    <script src="./main5.js"></script>
     <!--    <script src="./main3.js"></script>-->
     <!--    <script src="./main2.js"></script>-->
     <!--    <script src="./main.js"></script>-->
