--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!--    <script src="./objects2.js"></script>-->
     <!--    <script src="./objects1.js"></script>-->
     <!--    <script src="./main4.js"></script>-->
-    <script src="./main5.js"></script>
+    <script type="module" src="./main6.js"></script>
+    <!--    <script src="./main5.js"></script>-->
     <!--    <script src="./main3.js"></script>-->
     <!--    <script src="./main2.js"></script>-->
     <!--    <script src="./main.js"></script>-->
